--- a/life1.html
+++ b/life1.html
@@ -26,42 +26,21 @@
 
     <div class="container">
         <div  class="box_800">
-            <h2> 안녕하세요~ 000인 000입니다.</h2>
+            <h2> 나에 대한 질문</h2>
 
-            <h3>Choose a bank</h3>
-             <p> 너무 많은 선택지는 안준만 못하다 .
-                 Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
-                tomatillo
-                melon azuki bean garlic.</p>
+             <h3>1. 나는 어떤 사람인가?</h3>
+             <p> “당신은 어떤 사람입니까?” 이런 질문을 받았다고 해 보자. 여기에 어떤 식으로 답해야 할까? 실제로 회사 면접에서 나왔던 질문이고 대다수가 몹시 당황했던 질문이라고 한다. 단순한 질문이지만, 여기에 자신만의 답을 가지고 있는 사람은 많지 않다. 물론 대충 답할 수도 있지만, 그런 태도는 면접을 떠나 인생에 도움이 안 된다. 자신을 정의할 수 있어야 한다. 자기만의 방식으로.</p>
 
-            <h3  >Choose a bank</h3>
-            <p> 당신의 히스토리를 입력하세요~
-            Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
-            tomatillo
-            melon azuki bean garlic.</p>
+             <h3>2. 무엇이 나를 만드는가?</h3>
+             <p> 사람은 어떻게 성장할까? 자신이 한 선택이 곧 자기 자신이다. 매일 선택을 반복하고 그것이 습관이 돼 행동으로 발현된다. 중요한 건 그 모든 게 우리가 직접 결정한 것이란 거다. 선택을 똑바로 해야 한다. 목적 없이 넋 놓고 끌려다니다 보면 세월은 금방 가고 원하는 건 하나도 못 이루게 된다. 원인 없는 결과 없다고 뭔가 계속 안 풀린다는 건 그럴만한 선택을 반복하고 있다는 의미다.</p>
 
-            <h3  >Choose a bank</h3>
-            <p> 당신의 히스토리를 입력하세요~
-            Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
-            tomatillo
-            melon azuki bean garlic.</p>
-            <h3  >Choose a bank</h3>
-             <p> 당신의 히스토리를 입력하세요~
-                 Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
-                tomatillo
-                melon azuki bean garlic.</p>
+             <h3>3. 나는 무엇을 원하는가?</h3>
+             <p> 인생에 나침반 같은 질문이다. 대다수 사람은 자신에게 솔직하지 못하다. 자신이 원하는 게 뭔지 진지하게 탐구하지 않는다. 있다 하더라도 그걸 실천하지 않는다. 단순히 현실과 타협하는 문제가 아니다. 어떤 걸 진심으로 추구한다면 그것에 다가설 수 있게 마음을 다해야 한다. 그냥 뭐가 끌리는 것 같다는 식으로 툭 던지지 말고 내 모든 걸 걸만한 가치가 있는지 진지한 고민이 필요하다.</p>
 
-            <h3  >Choose a bank</h3>
-            <p> 당신의 히스토리를 입력하세요~
-            Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
-            tomatillo
-            melon azuki bean garlic.</p>
+             <h3>4. 나는 왜 사는가? </h3>
+             <p> 모든 사람은 행복하게 살길 원한다. 하지만 행복하게 살다 가는 것이 인생을 사는 이유가 될 순 없다. 그건 과정과 결과일 뿐이다. 그런 걸 이유라 하지 않는다. ‘나는 왜 사는가?’ 이 질문은 좀 더 근원적이다. 나라는 사람이 세상에 존재하는 이유를 나만의 방식으로 정의한다는 의미다. 정답은 없지만, 자신만의 답이 필요하다. 그것이 살면서 흔들릴 때마다 나를 잡아주는 큰 기둥이 된다.</p>
 
-            <h3  >Choose a bank</h3>
-            <p> 당신의 히스토리를 입력하세요~
-            Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
-            tomatillo
-            melon azuki bean garlic.</p>
+            <h3> 5. 내일 할일을 적어두고 다음날 실행한다. </h3>
         </div>
     </div>
 
