--- a/application2.html
+++ b/application2.html
@@ -30,6 +30,9 @@
                 기술을 모르는 사람에게 친절하게 응답하고 기술을 잘 아는 사람에게는 성실히 질문하는 스타일입니다.
                 십년간 it계열에 있으면서 많은 서비스를 경험했고 개발하였습니다.
                 모든 것을 다 개발할 수는 없지만 웹과 웹서버상에서 발생하는 문제들을 해결하려고 노력합니다.
+                문제가 발생하면 일단은 해결을 하고 재발을 방지하기 위한 프로세스를 구성합니다.
+                모든 문제는 사람이라 문제가 발생하지 않을 수 없고 발생하지 않을 수도 없습니다.
+                하지만 반복된다면 스트레스의 강도는 올라갈 것이고 그것을 해결하기 위해 항상 고민합니다.  
             </p>
 
             <h3 id="choose-a-bank"> 2006- 2008 </h3>
