--- a/application2.html
+++ b/application2.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="static/tag.css" >
     <link rel="stylesheet" href="static/a_style.css" >
     <link rel="stylesheet" href="static/layout.css" >
-
 </head><body>
 
     <div class="container-gnb">
         <div id="kakaoGnb" role="navigation" class="pc_header_gnb">
-            <img src="static/jhm.png" style="width:66px;height:66px;" />
+            <a href="index.html"><img src="static/jhm.png" style="width:66px;height:66px;" /></a>
             <ul>
                 <li> <a href="index.html"> 목록으로 </a> </li><li> <a href="/">menu1</a> </li>
             </ul>
@@ -24,15 +23,15 @@
             <h2> 안녕하세요~ 웹개발자인 인 jh 입니다.</h2>
 
             <h3 id="choose-a-bank"> 전체적 설명 </h3>
-            <p> 책임감이 강하고 일정을 최대한 지키려 노력하는 노력형 프로그래머 입니다.
+            <p> 책임감이 강하고 일정을 최대한 지키려 노력하는 노력형 웹 프로그래머 입니다.
                 문제해결 능력이 뛰어나며 커뮤니케이션의 중요성을 누구보다 잘 아는 직장인입니다.
                 다룰 수 있는 기술은 javascript, html5, jquery, css, php , nginx, oracle, mysql, aws구성, 시스템 프로세스 만들기,ubuntu, 파이썬 초급 입니다.
                 기술을 모르는 사람에게 친절하게 응답하고 기술을 잘 아는 사람에게는 성실히 질문하는 스타일입니다.
                 십년간 it계열에 있으면서 많은 서비스를 경험했고 개발하였습니다.
                 모든 것을 다 개발할 수는 없지만 웹과 웹서버상에서 발생하는 문제들을 해결하려고 노력합니다.
                 문제가 발생하면 일단은 해결을 하고 재발을 방지하기 위한 프로세스를 구성합니다.
-                모든 문제는 사람이라 문제가 발생하지 않을 수 없고 발생하지 않을 수도 없습니다.
-                하지만 반복된다면 스트레스의 강도는 올라갈 것이고 그것을 해결하기 위해 항상 고민합니다.  
+                기술보다는 사람과 일한다 생각하고 커뮤니케이션에서 부딪히지 않도록 노력합니다.
+                모든 문제는 사람에게 나오고 사람으로 해결된 다는 것을 알기에 커뮤니케이션에 부단히 노력하고 있습니다.
             </p>
 
             <h3 id="choose-a-bank"> 2006- 2008 </h3>
@@ -72,16 +71,22 @@
                 저의 스타트업 경험이였습니다.
             </p>
             <h3 id="choose-a-bank"> 2016- 2017</h3>
-            <p> 웹소설이라는 신세계을 알려준 곳. 노후화된 코딩과 신개념 코딩이 바닷물 처럼 만나면 어떻게 되는지 알려주는 사이트 였습니다.
+            <p> 웹소설이라는 신세계을 알려준 곳입니다. 노후화된 코딩과 신개념 코딩이 바닷물 처럼 만나면 어떻게 되는지 알려주는 사이트 였습니다.
                 aws을 여기서 처음 접했으며 git의 수많은 컨플릭트 때문에 고생했던 곳입니다. 어떤 친구가 풀을 안하고 강제로 커밋을 하는 것을
                 풀어나가는 경험을 하게 한 곳 입니다.
             </p>
             <h3 id="choose-a-bank"> 2017- 현재</h3>
-            <p> 광고와 마케팅을 배울 수 있었습니다. 여러가지 작은 이벤트에 대한 실력이 쌓이고 이젠 거의 이벤트 고수가 되었다고 감히 말씀드릴 수 있겠습니다.
+            <p> 광고와 마케팅관련 이벤트에 대한 프로세스와 기술을 배울 수 있는 기회였습니다.
+                네이버 메인에 광고를 걸게 되면 갑자기 폭주하는 트래픽에 대처도해보고 서버 용량도 증량하는 작업들을 해보았습니다.
+                원래 인프라 개발자는 아니지만 클라우드로 인프라 경험을 다양하게 해볼 수 있었습니다.
+                여러가지 작은 이벤트에 대한 논리력이 쌓이고 이젠 거의 이벤트 고수가 되었다고 감히 말씀드릴 수 있겠습니다.
+
                 마크업에 대해 기초부터 다시 배우게 되는 계기가 된 곳입니다.
                 많은 것을 배웠는데 많은 것을 다시 배우게 된 곳.
-                이제는 aws에다가 리눅스 인스턴스를 켜고 웹서버를 만드는 건 너무 쉬운 수준.
-                nginx설정도 건드릴 수 있고, 여러가지 웹서비스도 만들도 있는 수준이라고 생각하지만 아직도 부족한게 많고 배울 것 천지라는 것을 압니다.
+
+                이제는 aws에다가 리눅스 인스턴스를 켜고 웹서버를 만드는 건 너무 쉬운 수준이 되었습니다.
+                nginx설정도 테스트하고, 여러가지 웹서비스도 만들도 있는 수준이라고 생각하지만 아직도 부족한게 많고
+                배울 것이 많습니다..
             </p>
         </div>
     </div>
