--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
 
     </style>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3YZJFNR32C"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3YZJFNR32C');
+    </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+
 </head><body>
 
     <div class="container-head">
@@ -102,7 +113,7 @@
                 main 이라는 브랜치가 보임111
             </p>
         </div>
-                
+
         <div class="box_400">
            <h5> 섹션1 : 제목이지요 </h5>
           <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
