--- a/webapi_1.html
+++ b/webapi_1.html
@@ -47,7 +47,7 @@
              </p>
 
              <p>
-                <code>
+                 <pre>
                     var ele = document.getElementById('ele');
 
                     ele.classList.add('on');
@@ -58,8 +58,7 @@
                     ele.classList.contains('on', 'normal');
                     ele.classList.toggle('on');
                     ele.classList.toggle('on', false);
-                </code>
-
+                </pre>
              </p>
 
              <h3> HTML element 엘레먼트 삭제   </h3>
