--- a/application2.html
+++ b/application2.html
@@ -25,21 +25,28 @@
             <h3 id="choose-a-bank"> 전체적 설명 </h3>
             <p> 책임감이 강하고 일정을 최대한 지키려 노력하는 노력형 웹 프로그래머 입니다.
                 문제해결 능력이 뛰어나며 커뮤니케이션의 중요성을 누구보다 잘 아는 직장인입니다.
-                다룰 수 있는 기술은 javascript, html5, jquery, css, php , nginx, oracle, mysql, aws구성, 시스템 프로세스 만들기,ubuntu, 파이썬 초급 입니다.
+                다룰 수 있는 기술은 javascript, html5, jquery, css, php <br>
+                 ubuntu 18, 20 설치 nginx설치및 운용, oracle8,9,10, mysql설치 및 운용, aws구성, 시스템 프로세스 만들기,ubuntu, 파이썬 초급 입니다.
                 기술을 모르는 사람에게 친절하게 응답하고 기술을 잘 아는 사람에게는 성실히 질문하는 스타일입니다.
                 십년간 it계열에 있으면서 많은 서비스를 경험했고 개발하였습니다.
-                모든 것을 다 개발할 수는 없지만 웹과 웹서버상에서 발생하는 문제들을 해결하려고 노력합니다.
+                full stack 을 지향하지만 모든 것을 혼자 다 개발할 수는 있다고 생각하진 않습니다.
+                최대한 웹과 웹서버상에서 발생하는 문제들을 해결하려고 노력합니다. <br>
                 문제가 발생하면 일단은 해결을 하고 재발을 방지하기 위한 프로세스를 구성합니다.
                 기술보다는 사람과 일한다 생각하고 커뮤니케이션에서 부딪히지 않도록 노력합니다.
                 모든 문제는 사람에게 나오고 사람으로 해결된 다는 것을 알기에 커뮤니케이션에 부단히 노력하고 있습니다.
             </p>
 
-            <h3 id="choose-a-bank"> 2006- 2008 </h3>
+            <h3 id="choose-a-bank"> 2006 - 2008 </h3>
             <p>
                첫 회사는 포스회사 였습니다. 포스에서 영업정보를 얻으면 그것을 가지고 웹사이트를 통해 분석을 해주는 곳 이였습니다.
                대학을 막 졸업하고 입사하였기에 아무것도 모르고 힘들기만 했습니다. 지금 생각해 보면 별거 아니었지만 모르는 것 속에서 일을 하려니
                보통 힘든게 아니였습니다. 그래도 여기서 객체 class라는 것에 대한 개념을 세우고 ajax란 말도 배우곤 했습니다.
                오라클 8,9도 사용해보고 php도 써보고 웹이란 서비스에 시작을 알려준 곳 입니다.
+               <ul>
+                   <li> PHP 사용 -  라이브러리 방식 </li>
+                   <li> 리눅스 기반 </li>
+               </ul>
+
             </p>
 
             <h3 id="choose-a-bank">2008 - 2009 </h3>
@@ -47,33 +54,60 @@
                 여기서부터 시작했다면 첫회사가 그리 힘들진 않았을 듯할 정도로 기본을 배운 곳입니다.
                 윈도우 웹서버를 사용했고 php와 mysql을 사용하기 시작했습니다. 세리닷컴 외에도 여러 서비스를 하고 있던 곳이라 많이 배웠는데
                 여기서 기획자와 커뮤니케이션이란게 힘들다는 것을 첨으로 배웠습니다.
+                <ul>
+                    <li> PHP 사용 -  라이브러리 방식 </li>
+                    <li> 윈도우 기반 </li>
+                </ul>
             </p>
             <h3 id="choose-a-bank">2010 - 2011 </h3>
             <p> 여행사 사이트 관리로 들어갔는데 여기서 처음으로 제가 처음부터 끝까지 사이트를 만드는 경험을 해보았습니다.
                 그전에는 다들 뭔가 기반이 있었고 거기에 수정을 가하고 기능을 추가하는 것들 위주였는데 처음으로 기획자와 나 디자이너 셋이서 만든 사이트입니다.
                 어떤 사이트 였냐면 작은 자유 여행 상품들을 장바구니에 담아 주문을 하는 기능으로 기억합니다.
+                <ul>
+                    <li> PHP 사용 -  라이브러리 방식 </li>
+                    <li> 리눅스 기반 </li>
+                </ul>
             </p>
             <h3 id="choose-a-bank">2012-2013 </h3>
             <p> 대망의 티켓몬스터. 아마도 제가 입사한 업체 중에 제일 큰 기업이라 생각합니다.
                 큰 맘먹고 가서 많은 기술과 경험을 한 곳 입니다. 여기서 git도 배우고 리눅스에 대해 좀 더 심층적으로 생각했습니다.
                 개발자가 많아서 좋았고 많아서 힘들었던 여기서 파이선을 첨 접해 보았습니다.
                 쇼핑이 이렇게도 복잡할 수 있구나 경험을 한 곳이기도 합니다. 여기를 겪어서 그런지 쇼핑몰이 작게 되는게 신기하기만 할 뿐 입니다.
+                <ul>
+                    <li> PHP 사용 -  라이브러리 방식 </li>
+                    <li> 리눅스 기반 </li>
+                    <li> GIT 사용 </li>
+                    <li> CI 사용 </li>
+                </ul>
             </p>
             <h3 id="choose-a-bank"> 2013-2014</h3>
             <p> 부동산 경매에 대해서 배워보고 싶었고 그걸로 돈을 버는 회사가 신기해서 입사하게 되었습니다.
                 인터넷 상의 유료서비스라는 것을 처음 경험했고 여러가지 버그를 수정하고 여기서 배운 건 경매 프로세스 입니다.
                 크롤링을 처음 접한 곳이기도 합니다.
+                <ul>
+                    <li> PHP 사용 -  라이브러리 방식 </li>
+                    <li> 리눅스 기반 </li>
+                </ul>
             </p>
             <h3 id="choose-a-bank"> 2015-2016</h3>
             <p> 키위트리 - 드디어 스타트업이라는 곳에 발을 디딘 순간이였습니다.
                 저보다 나이 어린 친구가 사장이였고 팀원들과 돈독한 관계를 가질 수있었던 따뜻한 경험이였습니다.
                 육아교육 사이트를 만드는 부분이라 웹적인 부분은 문제가 없었으나 한글 문서를 변환하는 과정에서 문제가 생겨 사업을 접었던
                 저의 스타트업 경험이였습니다.
+                <ul>
+                    <li> PHP 사용 -  라이브러리 방식 </li>
+                    <li> 리눅스 기반 </li>
+                </ul>
             </p>
             <h3 id="choose-a-bank"> 2016- 2017</h3>
             <p> 웹소설이라는 신세계을 알려준 곳입니다. 노후화된 코딩과 신개념 코딩이 바닷물 처럼 만나면 어떻게 되는지 알려주는 사이트 였습니다.
                 aws을 여기서 처음 접했으며 git의 수많은 컨플릭트 때문에 고생했던 곳입니다. 어떤 친구가 풀을 안하고 강제로 커밋을 하는 것을
                 풀어나가는 경험을 하게 한 곳 입니다.
+                <ul>
+                    <li> PHP 사용 -  라이브러리 방식 </li>
+                    <li> 리눅스 기반 </li>
+                    <li> GIT 사용 </li>
+                </ul>
             </p>
             <h3 id="choose-a-bank"> 2017- 현재</h3>
             <p> 광고와 마케팅관련 이벤트에 대한 프로세스와 기술을 배울 수 있는 기회였습니다.
@@ -86,7 +120,14 @@
 
                 이제는 aws에다가 리눅스 인스턴스를 켜고 웹서버를 만드는 건 너무 쉬운 수준이 되었습니다.
                 nginx설정도 테스트하고, 여러가지 웹서비스도 만들도 있는 수준이라고 생각하지만 아직도 부족한게 많고
-                배울 것이 많습니다..
+                배울 것이 많습니다.
+                <ul>
+                    <li> PHP 사용 -  라이브러리 방식 </li>
+                    <li> 리눅스 기반 </li>
+                    <li> NGINX 사용 </li>
+                    <li> 자체 솔루션 만들어서 사용 </li>
+                    <li> AWS EC2, RDS 사용 </li>
+                </ul>
             </p>
         </div>
     </div>
