시저암호-2021/02/16 알고리즘 너 재밋다.

--- a/js_1.html
+++ b/js_1.html
@@ -64,6 +64,25 @@
                         }
                         </code>
                     </li>
+                    <li>
+                        ES6 10가지 기능<br>
+                        https://blog.asamaru.net/2017/08/14/top-10-es6-features/
+
+                        모질라 <br>
+                        https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects
+
+                        웹클럽
+                        https://webclub.tistory.com/329
+                    </li>
+                    <li>
+                        시저암호 -알고리즘 <br>
+                        https://jsfootprint.tistory.com/116 <br>
+                        1) 아스키코드로 변환 -> 변환한값 +n -> 아스키테이블의 정수값을 문자값으로 변환
+                        여기서 아스키테이블이 대소문자의 정수값이 다른 관계로 +n이 소문자인데 대문자를 찾기도 하고 대문자인대 소문자로 찾기도함.
+                        그래서 방법. 처음에 아스키코드가 대소문자 구분을 저장해두고 소문자의 경우 +n을 할때 소문자만 타고 대문자일 경우 대문자만 타게한다.
+                        <br>
+                        내가 푼 거 <a href="js_2.html" target="_blank">링크</a>
+                    </li>
                 </ul>
             </p>
         </div>
@@ -78,15 +97,6 @@
         </footer>
         <!--//  FOOTER -->
 
-<script>
-const onTime = new Date(2021,2,14,23,59,59);
-document.write(onTime);
-
-</script>
-
-
-
-    </div>
-    <!--// container -->
+    </div> <!--// container -->
 </body>
 </html>
