--- a/application2.html
+++ b/application2.html
@@ -46,7 +46,6 @@
                    <li> PHP 사용 -  라이브러리 방식 </li>
                    <li> 리눅스 기반 </li>
                </ul>
-
             </p>
 
             <h3 id="choose-a-bank">2008 - 2009 </h3>
@@ -68,7 +67,7 @@
                     <li> 리눅스 기반 </li>
                 </ul>
             </p>
-            <h3 id="choose-a-bank">2012-2013 </h3>
+            <h3 id="choose-a-bank">2012 - 2013 </h3>
             <p> 대망의 티켓몬스터. 아마도 제가 입사한 업체 중에 제일 큰 기업이라 생각합니다.
                 큰 맘먹고 가서 많은 기술과 경험을 한 곳 입니다. 여기서 git도 배우고 리눅스에 대해 좀 더 심층적으로 생각했습니다.
                 개발자가 많아서 좋았고 많아서 힘들었던 여기서 파이선을 첨 접해 보았습니다.
@@ -80,7 +79,7 @@
                     <li> CI 사용 </li>
                 </ul>
             </p>
-            <h3 id="choose-a-bank"> 2013-2014</h3>
+            <h3 id="choose-a-bank"> 2013 - 2014</h3>
             <p> 부동산 경매에 대해서 배워보고 싶었고 그걸로 돈을 버는 회사가 신기해서 입사하게 되었습니다.
                 인터넷 상의 유료서비스라는 것을 처음 경험했고 여러가지 버그를 수정하고 여기서 배운 건 경매 프로세스 입니다.
                 크롤링을 처음 접한 곳이기도 합니다.
@@ -89,7 +88,7 @@
                     <li> 리눅스 기반 </li>
                 </ul>
             </p>
-            <h3 id="choose-a-bank"> 2015-2016</h3>
+            <h3 id="choose-a-bank"> 2015 - 2016</h3>
             <p> 키위트리 - 드디어 스타트업이라는 곳에 발을 디딘 순간이였습니다.
                 저보다 나이 어린 친구가 사장이였고 팀원들과 돈독한 관계를 가질 수있었던 따뜻한 경험이였습니다.
                 육아교육 사이트를 만드는 부분이라 웹적인 부분은 문제가 없었으나 한글 문서를 변환하는 과정에서 문제가 생겨 사업을 접었던
@@ -99,7 +98,7 @@
                     <li> 리눅스 기반 </li>
                 </ul>
             </p>
-            <h3 id="choose-a-bank"> 2016- 2017</h3>
+            <h3 id="choose-a-bank"> 2016 - 2017</h3>
             <p> 웹소설이라는 신세계을 알려준 곳입니다. 노후화된 코딩과 신개념 코딩이 바닷물 처럼 만나면 어떻게 되는지 알려주는 사이트 였습니다.
                 aws을 여기서 처음 접했으며 git의 수많은 컨플릭트 때문에 고생했던 곳입니다. 어떤 친구가 풀을 안하고 강제로 커밋을 하는 것을
                 풀어나가는 경험을 하게 한 곳 입니다.
@@ -121,14 +120,29 @@
                 이제는 aws에다가 리눅스 인스턴스를 켜고 웹서버를 만드는 건 너무 쉬운 수준이 되었습니다.
                 nginx설정도 테스트하고, 여러가지 웹서비스도 만들도 있는 수준이라고 생각하지만 아직도 부족한게 많고
                 배울 것이 많습니다.
+                <h4> 기술적 작업 </h4>
                 <ul>
                     <li> PHP 사용 -  라이브러리 방식 </li>
-                    <li> 리눅스 기반 </li>
-                    <li> NGINX 사용 </li>
+                    <li> 리눅스 기반 -ubuntu, nginx, php7.0-fpm </li>
+                    <li> NGINX 설정 가능 </li>
                     <li> 자체 솔루션 만들어서 사용 </li>
                     <li> AWS EC2, RDS 사용 </li>
+                    <li> AWS 사용하여 보안 네트워크 적용해봄. </li>
                 </ul>
-            </p>
+                <h4> 서비스적 작업 </h4>
+                <ul>
+                    <li> youtube영상에 div추가하여 단서찾기 서비스 개발  </li>
+                    <li> 다양한 퀴즈형식 서비스 개발  </li>
+                    <li> 댓글 등록 서비스 개발  </li>
+                    <li> 쿠폰 발행 서비스 - 바코드 형식 개발 </li>
+                    <li> flip 방식의 카드 맞추기 게임 개발  </li>
+                    <li> 문자업체와 협업하여 api통신을 통한 쿠폰서비스 개발  </li>
+                    <li> kakao 지도 사용   </li>
+                    <li> facebook로그인 사용   </li>
+                    <li> 사내 야근관리 시스템 개발  </li>
+                    <li> 당첨자 랜덤 추천 시스템 개발 </li>
+                </ul>
+             </p>
         </div>
     </div>
 
