--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8">
-    <title> WEB PROGRAMMER JH - WELCOME PAGE </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="format-detection" content="telephone=no, address=no, email=no, date=no">
+    <title>JH WEB PROGRAMMER JH - WELCOME PAGE </title>
     <!-- <link rel="stylesheet" href="//necolas.github.io/normalize.css/8.0.1/normalize.css" > -->
     <link rel="stylesheet" href="static/tag.css" >
     <link rel="stylesheet" href="static/a_style.css" >
@@ -42,7 +44,6 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-3YZJFNR32C');
     </script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -63,7 +64,7 @@
 
     <div class="container-gnb">
         <div id="gnb_menu" role="navigation" class="pc_header_gnb">
-            <img src="static/jhm.png" style="width:66px;height:66px;" />
+            <img src="static/jhm.png" class="logo_img" />
             <ul>
                 <li> <a href="html_1.html"> HTML </a> </li>
                 <li> <a href="webapi_1.html"> Web API </a> </li>
@@ -98,7 +99,7 @@
               <table>
                   <tr><td width="85%"> <a href="basic1.html"> web의기본 </a></td><td>2021.01.01</td></tr>
                   <tr><td><a href="life1.html"> 인생의 명언 </a></td><td>2021.01.01</td></tr>
-                  <tr><td><a href="taste.html"> 취향테스트 </a></td><td>2021.01.01</td></tr>
+                  <tr><td><a href="js_1.html"> JS </a></td><td>2021.01.01</td></tr>
                  <tr><td><a href="current.html"> 현재시간 </a></td><td>2021.01.01</td></tr>
               </table>
         </div>
