--- a/html_1.html
+++ b/html_1.html
@@ -12,8 +12,8 @@
 <body>
 
     <div class="container-gnb">
-        <div id="kakaoGnb" role="navigation" class="pc_header_gnb">
-            <a href="index.html"><img src="static/jhm.png" style="width:66px;height:66px;" /></a>
+        <div  role="navigation" class="pc_header_gnb">
+            <a href="index.html"><img src="static/jhm.png" class="logo_img" /></a>
             <ul>
                 <li> <a href="index.html"> 미래의 메뉴1 </a> </li>
                 <li> <a href="/"> 미래의 메뉴2</a> </li>
