--- a/application2.html
+++ b/application2.html
@@ -141,6 +141,8 @@
                     <li> facebook로그인 사용   </li>
                     <li> 사내 야근관리 시스템 개발  </li>
                     <li> 당첨자 랜덤 추천 시스템 개발 </li>
+                    <li> 퀴즈가 들어간 이벤트 마이크로 사이트</li>
+                    <li> 각종 반응형 홈페이지 </li>
                 </ul>
              </p>
         </div>
