수정의 수정

--- a/application2.html
+++ b/application2.html
@@ -10,10 +10,13 @@
 </head><body>
 
     <div class="container-gnb">
-        <div id="kakaoGnb" role="navigation" class="pc_header_gnb">
-            <a href="index.html"><img src="static/jhm.png" style="width:66px;height:66px;" /></a>
+        <div id="gnb_menu" role="navigation" class="pc_header_gnb">
+            <img src="static/jhm.png" class="logo_img" />
             <ul>
-                <li> <a href="index.html"> 목록으로 </a> </li><li> <a href="/">menu1</a> </li>
+                <li> <a href="html_1.html"> HTML </a> </li>
+                <li> <a href="webapi_1.html"> Web API </a> </li>
+                <li> <a href="css_list.html"> CSS </a> </li>
+                <li> <a href="javascript:alert('준비중');"> My Post </a> </li>
             </ul>
         </div>
     </div>
@@ -24,9 +27,9 @@
 
             <h3 id="choose-a-bank"> 전체적 설명 </h3>
             <p> 책임감이 강하고 일정을 최대한 지키려 노력하는 노력형 웹 프로그래머 입니다.
-                문제해결 능력이 뛰어나며 커뮤니케이션의 중요성을 누구보다 잘 아는 직장인입니다.
+                문제 해결 능력이 뛰어나며 커뮤니케이션의 중요성을 누구보다 잘 아는 직장인입니다.
                 다룰 수 있는 기술은 javascript, html5, jquery, css, php <br>
-                 ubuntu 18, 20 설치 nginx설치및 운용, oracle8,9,10, mysql설치 및 운용, aws구성, 시스템 프로세스 만들기,ubuntu, 파이썬 초급 입니다.
+                 ubuntu 18, 20 설치 nginx설치및 운용, oracle8,9,10, mysql설치 및 운용, aws구성, 시스템 프로세스 만들기,ubuntu, 파이썬 초급 입니다. <br>
                 기술을 모르는 사람에게 친절하게 응답하고 기술을 잘 아는 사람에게는 성실히 질문하는 스타일입니다.
                 십년간 it계열에 있으면서 많은 서비스를 경험했고 개발하였습니다.
                 full stack 을 지향하지만 모든 것을 혼자 다 개발할 수는 있다고 생각하진 않습니다.
@@ -38,10 +41,11 @@
 
             <h3 id="choose-a-bank"> 2006 - 2008 </h3>
             <p>
-               첫 회사는 포스회사 였습니다. 포스에서 영업정보를 얻으면 그것을 가지고 웹사이트를 통해 분석을 해주는 곳 이였습니다.
+               첫 회사는 포스회사 였습니다. 포스에서 영업정보를 얻으면 그것을 가지고 웹사이트를 통해 분석을 해주는 서비스였습니다.
                대학을 막 졸업하고 입사하였기에 아무것도 모르고 힘들기만 했습니다. 지금 생각해 보면 별거 아니었지만 모르는 것 속에서 일을 하려니
                보통 힘든게 아니였습니다. 그래도 여기서 객체 class라는 것에 대한 개념을 세우고 ajax란 말도 배우곤 했습니다.
-               오라클 8,9도 사용해보고 php도 써보고 웹이란 서비스에 시작을 알려준 곳 입니다.
+               오라클 8,9도 사용해보고 php도 써보고 웹이란 서비스에 시작을 알려준 곳 입니다.<br>
+               다양한 케이스를 통해 여러가지 상황에 대처하는 법도 배웠습니다. <br>
                <ul>
                    <li> PHP 사용 -  라이브러리 방식 </li>
                    <li> 리눅스 기반 </li>
@@ -49,10 +53,10 @@
             </p>
 
             <h3 id="choose-a-bank">2008 - 2009 </h3>
-            <p> 삼성경제연구소에 계약직으로 들어갔습니다. 첫 회사에서 얻은 지식은 우회해서 배운곳입니다.
-                여기서부터 시작했다면 첫회사가 그리 힘들진 않았을 듯할 정도로 기본을 배운 곳입니다.
-                윈도우 웹서버를 사용했고 php와 mysql을 사용하기 시작했습니다. 세리닷컴 외에도 여러 서비스를 하고 있던 곳이라 많이 배웠는데
-                여기서 기획자와 커뮤니케이션이란게 힘들다는 것을 첨으로 배웠습니다.
+            <p> 삼성경제연구소에 계약직으로 들어갔습니다. 첫 회사에서 얻은 지식을 우회해서 배운 곳 입니다.
+                여기서부터 시작했다면 첫 회사가 그리 힘들진 않았을 듯할 정도로 기본을 배운 곳입니다.
+                윈도우 웹서버를 사용했고 php와 mysql을 사용하기 시작했습니다.<br>
+                세리닷컴 외에도 여러 서비스를 하고 있던 곳이라 많이 배웠는데 여기서 기획자와 커뮤니케이션이란 게 힘들다는 것을 첨으로 배웠습니다.
                 <ul>
                     <li> PHP 사용 -  라이브러리 방식 </li>
                     <li> 윈도우 기반 </li>
@@ -68,15 +72,17 @@
                 </ul>
             </p>
             <h3 id="choose-a-bank">2012 - 2013 </h3>
-            <p> 대망의 티켓몬스터. 아마도 제가 입사한 업체 중에 제일 큰 기업이라 생각합니다.
-                큰 맘먹고 가서 많은 기술과 경험을 한 곳 입니다. 여기서 git도 배우고 리눅스에 대해 좀 더 심층적으로 생각했습니다.
-                개발자가 많아서 좋았고 많아서 힘들었던 여기서 파이선을 첨 접해 보았습니다.
-                쇼핑이 이렇게도 복잡할 수 있구나 경험을 한 곳이기도 합니다. 여기를 겪어서 그런지 쇼핑몰이 작게 되는게 신기하기만 할 뿐 입니다.
+            <p> 대망의 티켓몬스터. 제가 입사한 기업 중에 제일 큰 기업이라 생각합니다.
+                큰 맘 먹고 가서 많은 기술과 경험을 한 곳 입니다. 여기서 git도 배우고 리눅스에 대해 좀 더 심층적으로 생각하게 되었습니다.
+                개발자가 많아서 좋았고 많아서 힘들었던 여기서 파이선을 첨 접해 보기도 했습니다.
+                쇼핑이 이렇게도 복잡할 수 있구나 경험을 한 곳이기도 합니다. 여기를 겪어서 그런지 쇼핑몰이 작게 운영되는 게 신기하기만 할 뿐 입니다.
+                하지만 세상에는 다양한 케이스가 있으니 다양하게 운영 될 것이라 생각합니다.
                 <ul>
                     <li> PHP 사용 -  라이브러리 방식 </li>
                     <li> 리눅스 기반 </li>
                     <li> GIT 사용 </li>
                     <li> CI 사용 </li>
+                    <li> Apache 사용 </li>
                 </ul>
             </p>
             <h3 id="choose-a-bank"> 2013 - 2014</h3>
@@ -86,6 +92,7 @@
                 <ul>
                     <li> PHP 사용 -  라이브러리 방식 </li>
                     <li> 리눅스 기반 </li>
+                    <li> Apache 사용 </li>
                 </ul>
             </p>
             <h3 id="choose-a-bank"> 2015 - 2016</h3>
@@ -96,6 +103,7 @@
                 <ul>
                     <li> PHP 사용 -  라이브러리 방식 </li>
                     <li> 리눅스 기반 </li>
+                    <li> Apache 사용 </li>
                 </ul>
             </p>
             <h3 id="choose-a-bank"> 2016 - 2017</h3>
@@ -106,20 +114,22 @@
                     <li> PHP 사용 -  라이브러리 방식 </li>
                     <li> 리눅스 기반 </li>
                     <li> GIT 사용 </li>
+                    <li> nginx 사용 </li>
+                    <li> lalavel 사용 </li>
                 </ul>
             </p>
             <h3 id="choose-a-bank"> 2017- 현재</h3>
             <p> 광고와 마케팅관련 이벤트에 대한 프로세스와 기술을 배울 수 있는 기회였습니다.
-                네이버 메인에 광고를 걸게 되면 갑자기 폭주하는 트래픽에 대처도해보고 서버 용량도 증량하는 작업들을 해보았습니다.
-                원래 인프라 개발자는 아니지만 클라우드로 인프라 경험을 다양하게 해볼 수 있었습니다.
-                여러가지 작은 이벤트에 대한 논리력이 쌓이고 이젠 거의 이벤트 고수가 되었다고 감히 말씀드릴 수 있겠습니다.
-
-                마크업에 대해 기초부터 다시 배우게 되는 계기가 된 곳입니다.
-                많은 것을 배웠는데 많은 것을 다시 배우게 된 곳.
-
+                네이버 메인에 광고를 걸게 되면 갑자기 폭주하는 트래픽에 대처도 해보고 서버 용량도 증량하는 작업들을 해보았습니다.
+                원래 인프라 개발자는 아니지만 클라우드로 인프라 경험을 다양하게 해 볼 수 있었습니다.
+                여러가지 작은 이벤트에 대한 논리력이 쌓이고 이젠 거의 이벤트 고수가 되었다고 감히 말씀드릴 수 있겠습니다.<br>
+                <br>
+                마크업에 대해 기초부터 다시 배우게 되는 계기가 된 곳입니다.<br>
+                많은 것을 배웠는데 많은 것을 다시 배우게 된 곳.<br>
+                <br>
                 이제는 aws에다가 리눅스 인스턴스를 켜고 웹서버를 만드는 건 너무 쉬운 수준이 되었습니다.
                 nginx설정도 테스트하고, 여러가지 웹서비스도 만들도 있는 수준이라고 생각하지만 아직도 부족한게 많고
-                배울 것이 많습니다.
+                배울 것이 많습니다.<br>
                 <h4> 기술적 작업 </h4>
                 <ul>
                     <li> PHP 사용 -  라이브러리 방식 </li>
@@ -127,11 +137,11 @@
                     <li> NGINX 설정 가능 </li>
                     <li> 자체 솔루션 만들어서 사용 </li>
                     <li> AWS EC2, RDS 사용 </li>
-                    <li> AWS 사용하여 보안 네트워크 적용해봄. </li>
+                    <li> AWS 사용하여 보안 네트워크 적용해 봄 </li>
                 </ul>
                 <h4> 서비스적 작업 </h4>
                 <ul>
-                    <li> youtube영상에 div추가하여 단서찾기 서비스 개발  </li>
+                    <li> youtube영상에 단서찾기 서비스 개발  </li>
                     <li> 다양한 퀴즈형식 서비스 개발  </li>
                     <li> 댓글 등록 서비스 개발  </li>
                     <li> 쿠폰 발행 서비스 - 바코드 형식 개발 </li>
