정상 모양새 만들기

--- a/application2.html
+++ b/application2.html
@@ -7,17 +7,21 @@
     <link rel="stylesheet" href="static/tag.css" >
     <link rel="stylesheet" href="static/a_style.css" >
     <link rel="stylesheet" href="static/layout.css" >
+
+
+
 </head><body>
 
     <div class="container-gnb">
-        <div id="gnb_menu" role="navigation" class="pc_header_gnb">
+        <div role="navigation" class="pc_header_gnb">
             <img src="static/jhm.png" class="logo_img" />
-            <ul>
+            <div id="gnb_menu"></div>
+            <!-- <ul>
                 <li> <a href="html_1.html"> HTML </a> </li>
                 <li> <a href="webapi_1.html"> Web API </a> </li>
                 <li> <a href="css_list.html"> CSS </a> </li>
                 <li> <a href="javascript:alert('준비중');"> My Post </a> </li>
-            </ul>
+            </ul> -->
         </div>
     </div>
 
@@ -163,6 +167,8 @@
           <p> © 2021 - mjh. All rights reserved. </p>
         </div>
     </div>
+
+<script src="static/gnb.js"></script>
 
 </body>
 </html>
