--- a/index.html
+++ b/index.html
@@ -63,14 +63,16 @@
     </div>
 
     <div class="container-gnb">
-        <div id="gnb_menu" role="navigation" class="pc_header_gnb">
+        <div role="navigation" class="pc_header_gnb">
             <img src="static/jhm.png" class="logo_img" />
-            <ul>
+            <div id="gnb_menu">
+            <!-- <ul>
                 <li> <a href="html_1.html"> HTML </a> </li>
                 <li> <a href="webapi_1.html"> Web API </a> </li>
                 <li> <a href="css_list.html"> CSS </a> </li>
                 <li> <a href="my_list.html"> My Post </a> </li>
-            </ul>
+            </ul> -->
+            </div>
         </div>
     </div>
 
@@ -135,11 +137,7 @@
 
     </div>
 
-<script>
-
-
-
-</script>
+<script src="static/gnb.js"></script>
 
 
 </body>
