reset css 추가 210222

--- a/application5.html
+++ b/application5.html
@@ -4,17 +4,15 @@
     <meta charset="utf-8">
     <title> 어딘가에 지원하기 2 </title>
     <!-- <link rel="stylesheet" href="//necolas.github.io/normalize.css/8.0.1/normalize.css" > -->
+    <link rel="stylesheet" href="static/reset.css" >
     <link rel="stylesheet" href="static/tag.css" >
     <link rel="stylesheet" href="static/a_style.css" >
     <link rel="stylesheet" href="static/layout.css" >
-
-
-
 </head><body>
 
     <div class="container-gnb">
         <div role="navigation" class="pc_header_gnb">
-            <img src="static/jhm.png" class="logo_img" />
+            <a href="index.html"><img src="static/jhm.png" class="logo_img" /></a>
             <div id="gnb_menu"></div>
             <!-- <ul>
                 <li> <a href="html_1.html"> HTML </a> </li>
@@ -30,7 +28,23 @@
             <h2> 안녕하세요~ 웹개발자인 인 jh 입니다.</h2>
 
             <h3 id="choose-a-bank"> 전체적 설명 </h3>
-            <p> 책임감이 강하고 일정을 최대한 지키려 노력하는 노력형 웹 프로그래머 입니다.
+            <p> 어떤 프로젝트를 경험했는지? - > 웹서비스 프로젝트만 경험해 봤습니다. <br>
+
+                어떤 도구/프레임웍을 사용했는지 -> php, nginx, linux ,ubuntu, git, javascript, html5, css3, bootstrap, lalavel, vagrant , sorucetree  <br>
+
+                어떤 개발 방법론을 사용했었는지 -> MVC  <br>
+
+                프로젝트에 어떤 책임으로 참여했는지 개발자인지 개발리더인지 -> 개발자로 참여했고 서버 설치부터 개발, 운영까지 해봤습니다.<br>
+
+                팀이나 회사에 프로젝트외에 어떤 기여를 했는지-> 주어진 프로젝트를 완성하였고 성공도 하고 실패도 하였습니다. <br>
+
+                프로젝트에서 발생한 기술적인 문제를 어떻게 해결하는지 -> 구글 검색과 스택오버플로우. 참고하여 해결합니다. 소스를 외우기보단 응용을 잘합니다. <BR>
+
+                리더쉽, 협업 -> 리더쉽은 약합니다. 단체 생활을 잘하긴 합니다만 리더가 되어 본 적은 별로 없습니다. <BR>
+
+                커뮤니케이션 스킬 -> 말이 안 통해 본적은 없습니다. 기획자와 소통 이제는 좀 알것 같습니다. 세상에 다양한 사람들이 있다는 것을 받아들이는 편입니다.  <br>
+            </p><p>
+                책임감이 강하고 일정을 최대한 지키려 노력하는 노력형 웹 프로그래머 입니다.
                 문제 해결 능력이 뛰어나며 커뮤니케이션의 중요성을 누구보다 잘 아는 직장인입니다.
                 다룰 수 있는 기술은 javascript, html5, jquery, css, php <br>
                  ubuntu 18, 20 설치 nginx설치및 운용, oracle8,9,10, mysql설치 및 운용, aws구성, 시스템 프로세스 만들기,ubuntu, 파이썬 초급 입니다. <br>
@@ -136,7 +150,7 @@
                 배울 것이 많습니다.<br>
 
                 서비스를 개발하고 운영하고 진행해 가면서 심장조이는 일도 많았지만 이벤트 실행시 많은 접속자 수와 반응이 이일의 즐거움이기도 합니다.
-                
+
 
                 <h4> 기술적 작업 </h4>
                 <ul>
