--- a/life1.html
+++ b/life1.html
@@ -43,7 +43,31 @@
              <h3> 5. 내일 할일을 적어두고 다음날 실행한다. </h3>
 
              <h3> 6. 너무 많은 데이타는 없는 데이타이다. 몇가지 핵심을 찾자.  </h3>
-             <p> 정보는 많아야 좋다. 그중에 선택할 수 있는게 중요 </p>
+             <p> 정보는 많아야 좋다. 그 중에 선택할 수 있는게 중요 </p>
+        </div>
+
+        <div  class="box_800">
+            <h2> 조금씩 실험하자 </h2>
+
+             <h3> 1차 실험 </h3>
+             <p> 매일 매일 10분간 oo을 한다.  </p>
+
+             <h3> 이력서를 매일매일 업무일지쓰듯 업데이트를 한다.  </h3>
+             <p> 매일이 한달 한달이 일년이다. </p>
+
+             <h3> 싫어하는 사람이라도 좋은 점만 봐야하는 이유 </h3>
+             <p> 인간관계는 내가 선택할 수 있는 범위를 벗어난다. 특히 사회생활의 경우에는 불특정 다수가 모여있기 때문에, 필연적으로 나와 맞지 않는 사람을 만나기도 한다. 그래서 힘든 게 회사 생활이고 사회생활이다. 하지만 우리가 싫더라도 사람들의 장점에 집중해야 하는 이유가 있다.
+                 <br>생각은 태도를 만든다. </p>
+
+             <h3>뇌를 가끔 속이는 것도 괜찮다. </h3>
+             <p> 너무 자주 속이면 안된다.  </p>
+
+             <h3> 원하는 것을 모를때 </h3>
+             <p>  오직 확실한 한 가지는 모든 건 행동을 통해 드러난다는 사실이다. 행동을 보라. </p>
+
+             <!-- <h3> 실험 1: 잡코리아의 포지션받기를 열어 두어보았다.</h3>
+             <p> 일주일의 결과 : 자기네 홈페이지도 관리 안하는 회사가 지원을 요청한다. 주로 구로구 에서 요청이 온다.  </p> -->
+
         </div>
 
         <div class="container">
@@ -51,7 +75,7 @@
               <p> © 2021 - mjh. All rights reserved. </p>
             </div>
         </div>
-        
+
     </div>
 
 
