--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="format-detection" content="telephone=no, address=no, email=no, date=no">
     <title>JH WEB PROGRAMMER JH - WELCOME PAGE </title>
     <!-- <link rel="stylesheet" href="//necolas.github.io/normalize.css/8.0.1/normalize.css" > -->
+    <link rel="stylesheet" href="static/reset.css" >
     <link rel="stylesheet" href="static/tag.css" >
     <link rel="stylesheet" href="static/a_style.css" >
     <link rel="stylesheet" href="static/layout.css" >
@@ -64,7 +65,7 @@
 
     <div class="container-gnb">
         <div role="navigation" class="pc_header_gnb">
-            <img src="static/jhm.png" class="logo_img" />
+            <a href="index.html"><img src="static/jhm.png" class="logo_img" /></a>
             <div id="gnb_menu">
             <!-- <ul>
                 <li> <a href="html_1.html"> HTML </a> </li>
@@ -83,14 +84,14 @@
             <p> 이력서용 공간 계속 꾸며야할 겁니다. 다양한 버전을 선보일 예정입니다. </p>
             <hr>
             <table>
+                <!-- <tr>
+                    <td width="85%"><a href="application.html"> 어딘가에 지원하기(러프버전) </a></td><td>2021.02.04</td></tr> -->
                 <tr>
-                    <td width="85%"><a href="application.html"> 어딘가에 지원하기(러프버전) </a></td><td>2021.02.04</td></tr>
-                <tr>
-                    <td><a href="application2.html"> 어딘가에 지원하기(정식버전) </a></td><td>2021.02.04</td></tr>
-                <tr>
+                    <td><a href="application5.html"> 어딘가에 지원하기(정식버전) </a></td><td>2021.02.04</td></tr>
+                <!-- <tr>
                     <td><a href="application3.html"> 어딘가에 지원하기(타임라인버전) </a></td><td>2021.02.04</td></tr>
                 <tr>
-                    <td><a href="application4.html">어딘가에 지원하기(tech기반버전) </a></td><td>2021.02.04</td></tr>
+                    <td><a href="application4.html">어딘가에 지원하기(tech기반버전) </a></td><td>2021.02.04</td></tr> -->
             </table>
         </div>
 
@@ -100,9 +101,9 @@
              <hr>
               <table>
                   <tr><td width="85%"> <a href="basic1.html"> web의기본 </a></td><td>2021.01.01</td></tr>
-                  <tr><td><a href="life1.html"> 인생의 명언 </a></td><td>2021.01.01</td></tr>
+                  <!-- <tr><td><a href="life1.html"> 인생의 명언 </a></td><td>2021.01.01</td></tr>
                   <tr><td><a href="js_1.html"> JS </a></td><td>2021.01.01</td></tr>
-                 <tr><td><a href="current.html"> 현재시간 </a></td><td>2021.01.01</td></tr>
+                 <tr><td><a href="current.html"> 현재시간 </a></td><td>2021.01.01</td></tr> -->
               </table>
         </div>
 
