--- a/css_list.html
+++ b/css_list.html
@@ -2,8 +2,9 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8">
-    <title> WEB PROGRAMMER JH - WELCOME PAGE </title>
+    <title>webapi.1 </title>
     <!-- <link rel="stylesheet" href="//necolas.github.io/normalize.css/8.0.1/normalize.css" > -->
+    <link rel="stylesheet" href="static/reset.css" >
     <link rel="stylesheet" href="static/tag.css" >
     <link rel="stylesheet" href="static/a_style.css" >
     <link rel="stylesheet" href="static/layout.css" >
@@ -132,15 +133,10 @@
               <p> © 2021 - mjh. All rights reserved. </p>
             </div>
         </div>
-        
+
     </div>
-
-<script>
-
-
-
-</script>
-
+    
+    <script src="static/gnb.js"></script>
 
 </body>
 </html>
