--- a/webapi_1.html
+++ b/webapi_1.html
@@ -2,14 +2,14 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8">
-    <title>WEB PROGRAMMER JH </title>
+    <title>webapi.1 </title>
     <!-- <link rel="stylesheet" href="//necolas.github.io/normalize.css/8.0.1/normalize.css" > -->
+    <link rel="stylesheet" href="static/reset.css" >
     <link rel="stylesheet" href="static/tag.css" >
     <link rel="stylesheet" href="static/a_style.css" >
     <link rel="stylesheet" href="static/layout.css" >
+</head><body>
 
-</head>
-<body>
 
     <div class="container-gnb">
         <div id="kakaoGnb" role="navigation" class="pc_header_gnb">
@@ -105,6 +105,8 @@
 
     </div>
     <!--// 내용 -->
+
+    <script src="static/gnb.js"></script>
 
 
 </body>
