--- a/html_1.html
+++ b/html_1.html
@@ -13,10 +13,8 @@
     <div class="container-gnb">
         <div  role="navigation" class="pc_header_gnb">
             <a href="index.html"><img src="static/jhm.png" class="logo_img" /></a>
-            <ul>
-                <li> <a href="index.html"> 미래의 메뉴1 </a> </li>
-                <li> <a href="/"> 미래의 메뉴2</a> </li>
-            </ul>
+            <div id="gnb_menu" ></div>
+
         </div>
     </div>
 
