--- a/zlayout.html
+++ b/zlayout.html
@@ -13,13 +13,13 @@
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-3YZJFNR32C"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-3YZJFNR32C');
-        </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3YZJFNR32C"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-3YZJFNR32C');
+    </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 
 </head>
@@ -28,11 +28,13 @@
     <div class="container-gnb">
         <div role="navigation" class="pc_header_gnb">
             <a href="index.html"><img src="static/jhm.png" class="logo_img" /></a>
-            <div id="gnb_menu">
-
-            </div>
+            <div id="gnb_menu"> </div>
         </div>
     </div>
+
+
+
+
 
     <hr>
     <footer class="footer">
