--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 
     <div class="container-head">
         <div  class="box_800">
-            <p> 안녕하세요 ~ web developer인  jh 입니다.</p>
-            <p> 사이트가 free인 관계로 프로그래밍 없이 css,javascript,html5 로 만 만들어진 web page입니다.<br>
+            <p> 안녕하세요 ~ WEB DEVELOPER 인  jh 입니다.</p>
+            <p> 사이트가 free인 관계로 프로그래밍 없이 css, javascript, html5 로 만 만들어진 WEB PAGE 입니다.<br>
                 여러가지 글을 쓸 예정이고 이곳은 2021년에 대한 기록이 될 것입니다.
                 2021년 동안 만들어질 것이라 아직은 미숙한 것이 많습니다.<br>
-                여기는 공지같은 공간이고 주저리 공간입니다. 변명 같지만 SIMPLE IS BEST 입니다 ㅎㅎㅎ <BR>
+                여기는 공지 같은 공간이고 주저리 공간입니다. 변명 같지만 SIMPLE IS BEST 입니다 ㅎㅎㅎ <BR>
                 저에게 디자인 감각을 주신다면 좋겠어요 ^^
             </p>
         </div>
@@ -67,12 +67,6 @@
         <div role="navigation" class="pc_header_gnb">
             <a href="index.html"><img src="static/jhm.png" class="logo_img" /></a>
             <div id="gnb_menu">
-            <!-- <ul>
-                <li> <a href="html_1.html"> HTML </a> </li>
-                <li> <a href="webapi_1.html"> Web API </a> </li>
-                <li> <a href="css_list.html"> CSS </a> </li>
-                <li> <a href="my_list.html"> My Post </a> </li>
-            </ul> -->
             </div>
         </div>
     </div>
@@ -80,14 +74,14 @@
     <div class="container">
 
         <div  class="box_400">
-            <h5> 나를 뽑내봐 </h5>
-            <p> 이력서용 공간 계속 꾸며야할 겁니다. 다양한 버전을 선보일 예정입니다. </p>
+            <h5> About me </h5>
+            <p> 누구를 꾸며주는 일만 하다보니 나를 표현하는 연습을 해야겠다는 생각으로 만든 공간. 다양한 버전을 선보일 예정입니다. </p>
             <hr>
             <table>
                 <!-- <tr>
                     <td width="85%"><a href="application.html"> 어딘가에 지원하기(러프버전) </a></td><td>2021.02.04</td></tr> -->
                 <tr>
-                    <td><a href="application5.html"> 어딘가에 지원하기(정식버전) </a></td><td>2021.02.04</td></tr>
+                    <td width="85%"><a href="application5.html"> 어딘가에 지원하기(정식버전) </a></td><td>2021.02.04</td></tr>
                 <!-- <tr>
                     <td><a href="application3.html"> 어딘가에 지원하기(타임라인버전) </a></td><td>2021.02.04</td></tr>
                 <tr>
@@ -96,8 +90,8 @@
         </div>
 
         <div  class="box_400">
-            <h5> 나의 게시물 </h5>
-             <p> 여러가지 기본에 대한 글 - 솔직히 적고 싶은데 자꾸 자체 검열이 되네요 </p>
+            <h5> 나의 저장소 </h5>
+             <p> 여러 가지 기본에 대한 글 - 솔직히 적고 싶은데 자꾸 자체 검열이 되네요 </p>
              <hr>
               <table>
                   <tr><td width="85%"> <a href="basic1.html"> web의기본 </a></td><td>2021.01.01</td></tr>
