--- a/charactor.html
+++ b/charactor.html
@@ -27,48 +27,51 @@
         <div  class="box_800">
 
             <h2> 나를 구성하는 것들 - 성격편 </h2>
-            <h5> 작성일 : 2020-01-30</h5>
+            <h5> 그래프 - 작성일 : 2020-01-30</h5>
             <div id="myPie" class="media border p-3"  >    </div>
-            <!-- <div id="myPie2" class="media border p-3"  >    </div> -->
-            <p>
-            </p>
+
             <p>  나를 구성하는 것을 정의하기는 어렵다... </p>
 
-            <script src="//clearm.github.io/new2020/vendor/apexcharts/dist/apexcharts.js"></script>
+            <!-- <script src="//clearm.github.io/new2020/vendor/apexcharts/dist/apexcharts.js"></script> -->
             <script>
 
-              var options = {
-                series: [44, 55, 13, 43, 22],
-                chart: {
-                     type: 'pie',
-                     width: 380,
-                     height: 280,
-                },
-                labels: ['규칙적', '적응력', '변덕', '고집', '들어주는편'],
-                responsive: [{
-                  breakpoint: 480,
-                  options: {
-                    chart: {
-                      width: 200
-                    },
-                    legend: {
-                      position: 'bottom'
-                    }
-                  }
-                }],
-                title :{ text : "성격",
-                }
-              };
-
-              var chart = new ApexCharts(document.querySelector("#myPie"), options);
-              chart.render();
+              // var options = {
+              //   series: [44, 55, 13, 43, 22],
+              //   chart: {
+              //        type: 'pie',
+              //        width: 380,
+              //        height: 280,
+              //   },
+              //   labels: ['규칙적', '적응력', '변덕', '친절성', '들어주는편'],
+              //   responsive: [{
+              //     breakpoint: 480,
+              //     options: {
+              //       chart: {
+              //         width: 200
+              //       },
+              //       legend: {
+              //         position: 'bottom'
+              //       }
+              //     }
+              //   }],
+              //   title :{ text : "성격",
+              //   }
+              // };
+              //
+              // var chart = new ApexCharts(document.querySelector("#myPie"), options);
+              // chart.render();
 
               // var chart2 = new ApexCharts(document.querySelector("#myPie2"), options);
               // chart2.render();
 
 
             </script>
-        </div>
+
+            <h5> MBTI </h5>
+            <p>  일단 웹에서 하는 결과로는 INFJ -  위대한 개츠비가 되지 않기 위한 노력이 필요하다고 합니다.  </p>
+
+
+        </div><!-- //box800 -->
     </div>
 
     <div class="container">
