--- a/charactor.html
+++ b/charactor.html
@@ -32,37 +32,37 @@
 
             <p>  나를 구성하는 것을 정의하기는 어렵다... </p>
 
-            <!-- <script src="//clearm.github.io/new2020/vendor/apexcharts/dist/apexcharts.js"></script> -->
+            <script src="//clearm.github.io/new2020/vendor/apexcharts/dist/apexcharts.js"></script>
             <script>
 
-              // var options = {
-              //   series: [44, 55, 13, 43, 22],
-              //   chart: {
-              //        type: 'pie',
-              //        width: 380,
-              //        height: 280,
-              //   },
-              //   labels: ['규칙적', '적응력', '변덕', '친절성', '들어주는편'],
-              //   responsive: [{
-              //     breakpoint: 480,
-              //     options: {
-              //       chart: {
-              //         width: 200
-              //       },
-              //       legend: {
-              //         position: 'bottom'
-              //       }
-              //     }
-              //   }],
-              //   title :{ text : "성격",
-              //   }
-              // };
-              //
-              // var chart = new ApexCharts(document.querySelector("#myPie"), options);
-              // chart.render();
+              var options = {
+                series: [44, 55, 13, 43, 22],
+                chart: {
+                     type: 'pie',
+                     width: 380,
+                     height: 280,
+                },
+                labels: ['규칙적', '적응력', '변덕', '친절성', '들어주는편'],
+                responsive: [{
+                  breakpoint: 480,
+                  options: {
+                    chart: {
+                      width: 200
+                    },
+                    legend: {
+                      position: 'bottom'
+                    }
+                  }
+                }],
+                title :{ text : "성격",
+                }
+              };
 
-              // var chart2 = new ApexCharts(document.querySelector("#myPie2"), options);
-              // chart2.render();
+              var chart = new ApexCharts(document.querySelector("#myPie"), options);
+              chart.render();
+
+              var chart2 = new ApexCharts(document.querySelector("#myPie2"), options);
+              chart2.render();
 
 
             </script>
