--- a/profile.html
+++ b/profile.html
@@ -45,6 +45,8 @@
                 커뮤니케이션 스킬 -> 말이 안 통해 본적은 없습니다. 기획자와 소통 이제는 좀 알것 같습니다. 세상에 다양한 사람들이 있다는 것을 받아들이는 편입니다.  <br>
 
                 요즘 관심사 - 서버보안과 css . 둘이 엄청나게 먼 기술 같아도 내가 정복 못 한 곳이기도 해서. 배워도 배워도 끝이 없습니다.  <br>
+
+                주의 사항 : 왜? 와 합리성에 대해 고민을 많이 하는 편입니다. 
             </p>
             <p>
                 책임감이 강하고 일정을 최대한 지키려 노력하는 노력형 웹 프로그래머 입니다.
