--- a/index.html
+++ b/index.html
@@ -19,6 +19,32 @@
         max-width: 900px;
         margin: 20px auto;
     }
+
+.display-none-txt { display: none;}
+
+p.typing-view {
+/*       position: absolute;*/
+display: inline-block;
+animation-name: cursor;
+animation-duration: 0.3s;
+animation-iteration-count: infinite;
+}
+
+.typing-view ul li{
+display:block;
+}
+
+.typing-view ul li.on {
+display: inline-block;
+animation-name: cursor;
+animation-duration: 0.3s;
+animation-iteration-count: infinite;
+}
+@keyframes cursor{
+0%{border-right: 1px solid #fff}
+50%{border-right: 1px solid #000}
+100%{border-right: 1px solid #fff}
+}
     </style>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -35,7 +61,9 @@
 
     <div class="container-head">
         <div  class="box_800">
-            <p> 안녕하세요 ~ WEB DEVELOPER 인  jh 입니다.</p>
+            <p class="display-none-txt">안녕하세요~ </p>
+            <p class="typing"></p>
+            <p class="typing-view"></p>
             <p> 사이트가 free인 관계로 프로그래밍 없이 css, javascript, html5 로 만 만들어진 WEB PAGE 입니다.<br>
                 여러가지 글을 쓸 예정이고 이곳은 2021년에 대한 기록이 될 것입니다.
                 full stack 개발자가 사이트도 없어서 라고 하지만 생각보다 css을 못하더라고요. <br>
@@ -46,6 +74,34 @@
             </p>
         </div>
     </div>
+
+    <script>
+    let typingBool = false;
+    var typingIdx=0;
+    let typingTxt =  document.querySelector(".display-none-txt").innerText;     //  $(".display-none-txt").text(); // 타이핑될 텍스트를 가져온다
+
+     typingTxt = typingTxt.split(""); // 한글자씩 자른다.
+
+    //console.log(typingTxt);
+
+    if(typingBool==false){ // 타이핑이 진행되지 않았다면
+       typingBool=true;
+       var tyInt = setInterval(typing,100); // 반복동작
+     }
+
+     function typing(){
+       if(typingIdx < typingTxt.length){ // 타이핑될 텍스트 길이만큼 반복
+         // $(".typing-view").append(typingTxt[typingIdx]); // 한글자씩 이어준다.
+         document.querySelector(".typing-view").textContent  += typingTxt[typingIdx];
+
+         typingIdx++;
+       } else{
+         clearInterval(tyInt); //끝나면 반복종료
+       }
+     }
+    </script>
+
+
 
     <div class="container-gnb">
         <div role="navigation" class="pc_header_gnb">
@@ -153,11 +209,11 @@
 
     var s_date = document.getElementById("now_date");
     var today  = new Date();
-    var year   = today.getFullYear();
-    var month  = today.getMonth()+1;
-    var date   = today.getDate();
+    var t_year   = today.getFullYear();
+    var t_month  = today.getMonth()+1;
+    var t_date   = today.getDate();
 
-    s_date.textContent = year+"-"+month+"-"+date;
+    s_date.textContent = t_year+"-"+t_month+"-"+t_date;
 
 </script>
 
