--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     }
 
 .display-none-txt { display: none;}
-
 p.typing-view {
 /*       position: absolute;*/
 display: inline-block;
@@ -29,11 +28,9 @@ animation-name: cursor;
 animation-duration: 0.3s;
 animation-iteration-count: infinite;
 }
-
 .typing-view ul li{
 display:block;
 }
-
 .typing-view ul li.on {
 display: inline-block;
 animation-name: cursor;
@@ -61,7 +58,7 @@ animation-iteration-count: infinite;
 
     <div class="container-head">
         <div  class="box_800">
-            <p class="display-none-txt">안녕하세요~ </p>
+            <p class="display-none-txt">안녕하세요~ web developer jh 입니다.  </p>
             <p class="typing"></p>
             <p class="typing-view"></p>
             <p> 사이트가 free인 관계로 프로그래밍 없이 css, javascript, html5 로 만 만들어진 WEB PAGE 입니다.<br>
