--- a/profile.html
+++ b/profile.html
@@ -10,23 +10,19 @@
     <link rel="stylesheet" href="static/layout.css" >
 </head><body>
 
+<!-- menu -->
     <div class="container-gnb">
         <div role="navigation" class="pc_header_gnb">
             <a href="index.html"><img src="static/jhm.png" class="logo_img" /></a>
             <div id="gnb_menu"></div>
-            <!-- <ul>
-                <li> <a href="html_1.html"> HTML </a> </li>
-                <li> <a href="webapi_1.html"> Web API </a> </li>
-                <li> <a href="css_list.html"> CSS </a> </li>
-                <li> <a href="javascript:alert('준비중');"> My Post </a> </li>
-            </ul> -->
         </div>
     </div>
+<!--// menu -->
 
     <div class="container">
         <div  class="box_800">
-            <h2> 안녕하세요~ 12년차 웹개발자인 인 jh 입니다.</h2>
-
+            <h2> 안녕하세요~ 12년차 기본을 갖춘 웹개발자인 인 jh 입니다.</h2>
+            <img src="static/web.png" />
             <h3 id="choose-a-bank"> 전체적 설명 </h3>
             <p> 어떤 프로젝트를 경험했는지? - > 웹서비스 프로젝트만 경험해 봤습니다. <br>
 
@@ -46,7 +42,7 @@
 
                 요즘 관심사 - 서버보안과 css . 둘이 엄청나게 먼 기술 같아도 내가 정복 못 한 곳이기도 해서. 배워도 배워도 끝이 없습니다.  <br>
 
-                주의 사항 : 왜? 와 합리성에 대해 고민을 많이 하는 편입니다. 
+                주의 사항 : 왜? 와 합리성에 대해 고민을 많이 하는 편입니다.
             </p>
             <p>
                 책임감이 강하고 일정을 최대한 지키려 노력하는 노력형 웹 프로그래머 입니다.
